--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  overflow-x: hidden;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity, 1));
+}
